[package]
name = "futures-signals"
version = "0.3.41"
authors = ["Pauan <pcxunlimited@gmail.com>"]
description = "Zero cost FRP signals using the futures crate"
repository = "https://github.com/Pauan/rust-signals"
homepage = "https://github.com/Pauan/rust-signals"
readme = "README.md"
license = "MIT"
keywords = ["signal", "reactive", "frp", "futures"]
categories = ["asynchronous", "concurrency", "data-structures"]
edition = "2018"
publish = ["trugman"]
rust-version = "1.31" # we need this for paste crate

[features]
default = ["debug", "serde"]
debug = ["log"]

[dependencies]
futures-core = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
discard = "1.0"
pin-project = "1.0"
gensym = "0.1"
paste = "1.0"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
futures-executor = "0.3"
pin-utils = "0.1"
once_cell = "1.10"
indoc = "2.0"
criterion = { version = "0.5", features = [] }

[[bench]]
name = "channel"
harness = false
